--- a/views/index.pug
+++ b/views/index.pug
@@ -6,5 +6,150 @@ head
 	link(rel="stylesheet", href="/css/style.css")
 	title FCC -- Anon message board
 body
-	main.container.d-flex.justify-content-center
-		h2 Connected!
+	main.container
+		section.row.flex-column.align-items-center
+			h2 Anon message board
+			h3 Requirements
+			ol
+				li Only allow your site to be loading in an iFrame on your own pages.
+				li Do not allow DNS prefetching.
+				li Only allow your site to send the referrer for your own pages.
+				li I can POST a thread to a specific message board by passing form data text and delete_password to /api/threads/{board}.(Recomend res.redirect to board page /b/{board}) Saved will be _id, text, created_on(date&amp;time), bumped_on(date&amp;time, starts same as created_on), reported(boolean), delete_password, &amp; replies(array).
+				li I can POST a reply to a thead on a specific board by passing form data text, delete_password, &amp; thread_id to /api/replies/{board} and it will also update the bumped_on date to the comments date.(Recomend res.redirect to thread page /b/{board}/{thread_id}) In the thread's 'replies' array will be saved _id, text, created_on, delete_password, &amp; reported.
+				li I can GET an array of the most recent 10 bumped threads on the board with only the most recent 3 replies from /api/threads/{board}. The reported and delete_passwords fields will not be sent.
+				li I can GET an entire thread with all it's replies from /api/replies/{board}?thread_id={thread_id}. Also hiding the same fields.
+				li I can delete a thread completely if I send a DELETE request to /api/threads/{board} and pass along the thread_id &amp; delete_password. (Text response will be 'incorrect password' or 'success')
+				li I can delete a post(just changing the text to '[deleted]') if I send a DELETE request to /api/replies/{board} and pass along the thread_id, reply_id, &amp; delete_password. (Text response will be 'incorrect password' or 'success')
+				li I can report a thread and change it's reported value to true by sending a PUT request to /api/threads/{board} and pass along the thread_id. (Text response will be 'success')
+				li I can report a reply and change it's reported value to true by sending a PUT request to /api/replies/{board} and pass along the thread_id &amp; reply_id. (Text response will be 'success')
+				li Complete functional tests that wholely test routes and pass.
+			table.highlight
+				thead
+					tr
+						th API
+						th GET
+						th POST
+						th PUT
+						th DELETE
+				tbody
+					tr
+						td /api/threads/{board}
+						td List recent threads
+						td Create thread
+						td Report thread
+						td Delete thread with password
+					tr
+						td /api/replies/{board}
+						td Show all replies on thread
+						td Create reply on thread
+						td Report reply on thread
+						td Change reply to '[deleted]' on thread
+		section.row.align-items-center
+			div.col-sm-12.spacing.d-flex.justify-content-center
+				h2 Thread operations
+			form.col-sm-12.col-lg-6(method="GET" action="/api/threads")
+				div.highlight
+					h3.header Find threads on board
+					div.row.spacing
+						label.col-sm-6(for="board") Board:
+						input.col-sm-6(type="text" name="board")
+					div.row.spacing
+						input.col-sm-12(type="submit" value="Find threads")
+			form.col-sm-12.col-lg-6(method="POST" action="/api/threads")
+				div.highlight
+					h3.header Create a thread
+					div.row.spacing
+						label.col-sm-6(for="board") Board:
+						input.col-sm-6(type="text" name="board")
+					div.row.spacing
+						label.col-sm-6(for="thread") Text:
+						textarea.col-sm-6(name="thread" placeholder="Thread text...")
+					div.row.spacing
+						label.col-sm-6(for="password") Pass:
+						input.col-sm-6(type="password" name="password" placeholder="Password to delete")
+					div.row.spacing
+						input.col-sm-12(type="submit" value="Create thread")
+			form.col-sm-12.col-lg-6(method="PUT" action="/api/threads")
+				div.highlight
+					h3.header Report thread
+					div.row.spacing
+						label.col-sm-6(for="board") Board:
+						input.col-sm-6(type="text" name="board")
+					div.row.spacing
+						label.col-sm-6(for="thread") Thread ID:
+						input.col-sm-6(type="text" name="thread")
+					div.row.spacing
+						input.col-sm-12(type="submit" value="Report thread")
+			form.col-sm-12.col-lg-6(method="DELETE" action="/api/threads")
+				div.highlight
+					h3.header Delete thread
+					div.row.spacing
+						label.col-sm-6(for="thread") Thread ID:
+						input.col-sm-6(type="text" name="thread")
+					div.row.spacing
+						label.col-sm-6(for="password") Pass:
+						input.col-sm-6(type="password" name="password" placeholder="Password to delete")
+					div.row.spacing
+						input.col-sm-12(type="submit" value="Delete thread")
+		section.row.align-items-center
+			div.col-sm-12.spacing.d-flex.justify-content-center
+				h2 Reply operations
+			form.col-sm-12.col-lg-6(method="GET" action="/api/replies")
+				div.highlight
+					h3.header Show replies on thread
+					div.row.spacing
+						label.col-sm-6(for="board") Board:
+						input.col-sm-6(type="text" name="board")
+					div.row.spacing
+						label.col-sm-6(for="thread") Thread ID:
+						input.col-sm-6(type="text" name="thread")
+					div.row.spacing
+						input.col-sm-12(type="submit" value="Show replies")
+			form.col-sm-12.col-lg-6(method="POST" action="/api/replies")
+				div.highlight
+					h3.header Reply to thread
+					div.row.spacing
+						label.col-sm-6(for="board") Board:
+						input.col-sm-6(type="text" name="board")
+					div.row.spacing
+						label.col-sm-6(for="thread") Thread ID:
+						input.col-sm-6(type="text" name="thread")
+					div.row.spacing
+						label.col-sm-6(for="reply") Reply:
+						textarea.col-sm-6(name="reply" placeholder="Reply text...")
+					div.row.spacing
+						label.col-sm-6(for="password") Pass:
+						input.col-sm-6(type="password" name="password" placeholder="Password to delete")
+					div.row.spacing
+						input.col-sm-12(type="submit" value="Post reply")
+			form.col-sm-12.col-lg-6(method="PUT" action="/api/replies")
+				div.highlight
+					h3.header Report reply on thread
+					div.row.spacing
+						label.col-sm-6(for="board") Board:
+						input.col-sm-6(type="text" name="board")
+					div.row.spacing
+						label.col-sm-6(for="thread") Thread ID:
+						input.col-sm-6(type="text" name="thread")
+					div.row.spacing
+						label.col-sm-6(for="reply") Reply ID:
+						input.col-sm-6(type="text" name="reply")
+					div.row.spacing
+						input.col-sm-12(type="submit" value="Report reply")
+			form.col-sm-12.col-lg-6(method="DELETE" action="/api/replies")
+				div.highlight
+					h3.header Delete reply on thread
+					div.row.spacing
+						label.col-sm-6(for="board") Board:
+						input.col-sm-6(type="text" name="board")
+					div.row.spacing
+						label.col-sm-6(for="thread") Thread ID:
+						input.col-sm-6(type="text" name="thread")
+					div.row.spacing
+						label.col-sm-6(for="reply") Reply ID:
+						input.col-sm-6(type="text" name="reply")
+					div.row.spacing
+						label.col-sm-6(for="password") Pass:
+						input.col-sm-6(type="password" name="password" placeholder="Password to delete")
+					div.row.spacing
+						input.col-sm-12(type="submit" value="Delete reply")
