--- a/views/index.pug
+++ b/views/index.pug
@@ -15,7 +15,7 @@ body
 				li Do not allow DNS prefetching.
 				li Only allow your site to send the referrer for your own pages.
 				li I can POST a thread to a specific message board by passing form data text and delete_password to /api/threads/{board}.(Recomend res.redirect to board page /b/{board}) Saved will be _id, text, created_on(date&amp;time), bumped_on(date&amp;time, starts same as created_on), reported(boolean), delete_password, &amp; replies(array).
-				li I can POST a reply to a thead on a specific board by passing form data text, delete_password, &amp; thread_id to /api/replies/{board} and it will also update the bumped_on date to the comments date.(Recomend res.redirect to thread page /b/{board}/{thread_id}) In the thread's 'replies' array will be saved _id, text, created_on, delete_password, &amp; reported.
+				li I can POST a reply to a thread on a specific board by passing form data text, delete_password, &amp; thread_id to /api/replies/{board} and it will also update the bumped_on date on thread.(Recomend res.redirect to thread page /b/{board}/{thread_id}) In the thread's 'replies' array will be saved _id, text, created_on, delete_password, &amp; reported.
 				li I can GET an array of the most recent 10 bumped threads on the board with only the most recent 3 replies from /api/threads/{board}. The reported and delete_passwords fields will not be sent.
 				li I can GET an entire thread with all it's replies from /api/replies/{board}?thread_id={thread_id}. Also hiding the same fields.
 				li I can delete a thread completely if I send a DELETE request to /api/threads/{board} and pass along the thread_id &amp; delete_password. (Text response will be 'incorrect password' or 'success')
